--- a/about.html
+++ b/about.html
@@ -1,30 +1,23 @@
 <!doctype html>
 <html>
-	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+
+<title>
+Penthouse Technologies
+</title>
+
+	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
+  <img src="phwhitelogo.png" alt="logo" width="125px" class="center-logo">
 
-<div class = "navbar">
-  <a href="contact.html">Contact Us</a>
-  <a href="strategy.html">About Us</a>
-  <a href="index.html">Home</a>
-  <b1>Penthouse Portfolios</b1>
-</div>
+  <div class = "navbar">
+    <a href="index.html">About</a>
+    <a href="strategies.html">Strategies</a>
+    <a href="contact.html">Contact</a>
+  </div>
 
-<about>
-Penthouse Portfolios is a hedge fund founded and ran by a 17 year old from Virginia.</br>
-</br>
-</about>
-<message>
-"I've constantly been getting told that I needed a track record to get funding to invest,</br>
-but I'm a teenager with no money, so I couldn't get a track record.</br>
-Seeing all of my ideas come to fruition while I just had to sit there and watch.</br>
-It's like being the NBA with an injury. All I want to do is play the game.</br>
-A while back I made this program that actually turned out to be really accurate,</br>
-on some days even perfect, at predicting stock prices. I have this great program and these great ideas,</br>
-but still no funding. So, I decided that instead of continuing trying to find someone else to fund my ideas,</br>
-I'm going to sell my program so I can fund my ideas myself."</br>
-</message>
-<sig>
-- Penthouse Portfolios CEO, Josh Oldmixon
-</sig>
+  <p>
+    Penthouse Technologies is a quantitative investment firm based in Richmond, Virginia and currently has an AUM of $500,000.
+    Penthouse uses cutting-edge, proprietary technology to systematically trade US equities with investor capital. <br>
+  </p>
+
 </html>
