--- a/index.html
+++ b/index.html
@@ -6,17 +6,24 @@ Penthouse Portfolios
 </title>
 
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
+  <link href="https://db.onlinewebfonts.com/c/953440d6182da090377d805e5156873c?family=Korbin+W01+Medium" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
-
-  <div class = "navbar">
-    <img src="phwhitelogo.png" alt="logo" width="300px" class="center-logo">
-    <!-- <a href="index.html">Home</a>
-    <a href="strategy.html">Strategies</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact</a> -->
+  <div class = "splash">
+    <div class = "splashtext">
+      The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here. ↓
+    </div>
   </div>
-
-  <p>
-    Coming Soon. <br>
-  </p>
+  <div class = "splash">
+    <div class = "splashtext">
+      The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here.
+    </div>
+  </div>
+  <div class = "navbar">
+    <div class = "companylogoheader">
+      <a href="index.html"><img src="phwhitelogo.png" alt="logo" width="80px"></a>
+    </div>
+    <div class = "companynameheader">
+      <h1>Penthouse Portfolios</h1>
+    </div>
+  </div>
 </html>
