--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Penthouse Portfolios
   </div>
   <div class = "navbar">
     <div class = "companylogoheader">
-      <a href="index.html"><img src="phwhitelogo.png" alt="logo" width="80px"></a>
+      <a href="index.html"><img src="phwhitelogo.png" alt="logo" width="80vw"></a>
     </div>
     <div class = "companynameheader">
       <h1>Penthouse Portfolios</h1>
