--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@ Penthouse Portfolios
 	<link href="main.css" rel="stylesheet" type="text/css"/>
   <div class = "splash">
     <div class = "splashtext">
-      The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here.<!--  ↓ -->
+      The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here. ↓
+    </div>
+  </div>
+  <div class = "page1">
+    <div class = "page1header">
+      About
+    </div>
+    <div class = "page1text">
+      Penthouse Technologies is a quantitative investment firm based in Richmond, Virginia that uses proprietary technology to systematically trade US equities with investor capital. Our research is primarily focused on machine learning and the implementation of neural-networks.<br><br><br>
+      Current AUM: $100,000&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;↓
+    </div>
+  </div>
+  <div class = "page2">
+    <div class = "page2header">
+      Contact
+    </div>
+    <div class = "page2text">
+      For more information, please email <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>.
     </div>
   </div>
   <div class = "navbar">
