--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Penthouse Portfolios
 	<link href="main.css" rel="stylesheet" type="text/css"/>
   <div class = "splash">
     <div class = "splashtext">
-      The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here. ↓
+      The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here.
     </div>
   </div>
   <div class = "page1">
@@ -18,8 +18,8 @@ Penthouse Portfolios
       About
     </div>
     <div class = "page1text">
-      Penthouse Technologies is a quantitative investment firm based in Richmond, Virginia that uses proprietary technology to systematically trade US equities with investor capital. Our research is primarily focused on machine learning and the implementation of neural networks into trading environments.<br><br><br>
-      Current AUM: $100,000&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;↓
+      Penthouse Technologies is a quantitative investment firm based in Richmond, Virginia that uses proprietary technology to systematically trade US equities with investor capital. Our research is primarily focused on machine learning and the implementation of neural-networks.<br><br><br>
+      Current AUM: $100,000
     </div>
   </div>
   <div class = "page2">
