--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Penthouse Portfolios
       About
     </div>
     <div class = "page1text">
-      Penthouse Technologies is a quantitative investment firm based in Richmond, Virginia that uses proprietary technology to systematically trade US equities with investor capital. Our research is primarily focused on machine learning and the implementation of neural-networks.<br><br><br>
+      Penthouse Technologies is a quantitative investment firm based in Richmond, Virginia that uses proprietary technology to systematically trade US equities with investor capital. Our research is primarily focused on machine learning and the implementation of neural networks into trading environments.<br><br><br>
       Current AUM: $110,000
     </div>
   </div>
