--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <title>
-Penthouse Technologies
+Penthouse Portfolios
 </title>
 
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@ Penthouse Technologies
   </div>
 
   <p>
-    Penthouse Technologies is a quantitative investment firm based in Richmond, Virginia and currently has an AUM of $500,000.
+    Penthouse Portfolios is a quantitative investment firm based in Richmond, Virginia and currently has an AUM of $500,000.
     Penthouse uses cutting-edge, proprietary technology to systematically trade US equities with investor capital. <br>
   </p>
 
