--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ Penthouse Portfolios
       About
     </div>
     <div class = "page1text">
-      Penthouse Portfolios is a quantitative investment firm based in Richmond, Virginia that uses proprietary technology to systematically trade US equities with investor capital. Our research is primarily focused on machine learning and the implementation of neural networks into trading environments.<br><br><br>
-
+      Penthouse Portfolios is a quantitative investment firm based in Richmond, Virginia that uses proprietary technology to systematically trade US equities with investor capital. Our research is primarily focused on machine learning and the implementation of neural networks into trading environments.<br><br><be>
+      Current AUM: $100,000
     </div>
   </div>
   <div class = "page2">
