--- a/index.html
+++ b/index.html
@@ -14,19 +14,9 @@ Penthouse Portfolios
     </div>
   </div>
   <div class = "page1">
-    <div class = "page1header">
-      About
-    </div>
     <div class = "page1text">
       Penthouse Portfolios is a quantitative investment firm based in Richmond, Virginia that uses proprietary technology to systematically trade US equities with investor capital. Our research is primarily focused on machine learning and the implementation of neural networks into trading environments.<br><br><be>
-    </div>
-  </div>
-  <div class = "page2">
-    <div class = "page2header">
-      Contact
-    </div>
-    <div class = "page2text">
-      For more information, please email <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>.
+      <br>For more information, please email <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>.    
     </div>
   </div>
   <div class = "navbar">
