--- a/index.html
+++ b/index.html
@@ -8,17 +8,8 @@ Penthouse Portfolios
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
   <link href="https://db.onlinewebfonts.com/c/953440d6182da090377d805e5156873c?family=Korbin+W01+Medium" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
-  <div class = "splash">
-    <div class = "splashtext">
-      The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here. ↓
-    </div>
-  </div>
-  <div class = "page1">
-    <div class = "page1text">
-      Penthouse Portfolios is a quantitative investment firm based in Richmond, Virginia that uses proprietary technology to systematically trade US equities with investor capital. Our research is primarily focused on machine learning and the implementation of neural networks into trading environments.<br><br><be>
-      <br>For more information, please email <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>.    
-    </div>
-  </div>
+<body>
+
   <div class = "navbar">
     <div class = "companylogoheader">
       <a href="index.html"><img src="phwhitelogo.png" alt="logo" width="80vw"></a>
@@ -27,4 +18,19 @@ Penthouse Portfolios
       <h1>Penthouse Portfolios</h1>
     </div>
   </div>
+
+  <div class = "splash">
+    <div class = "splashtext">
+      The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here. ↓
+    </div>
+  </div>
+
+  <div class = "page1">
+    <div class = "page1text">
+      Penthouse Portfolios is a quantitative investment firm based in Richmond, Virginia that uses proprietary technology to systematically trade US equities with investor capital. Our research is primarily focused on machine learning and the implementation of neural networks into trading environments.<br><br><be>
+      <br>For more information, please email <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>.    
+    </div>
+  </div>
+
+</body>
 </html>
