--- a/index.html
+++ b/index.html
@@ -21,16 +21,26 @@ Penthouse Portfolios
 
   <div class = "splash">
     <div class = "splashtext">
-      The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here. ↓
+      The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here.↓
     </div>
   </div>
 
   <div class = "page1">
+    <div class = "page1header">
+      About
+    </div>
     <div class = "page1text">
-      Penthouse Portfolios is a quantitative investment firm based in Richmond, Virginia that uses proprietary technology to systematically trade US equities with investor capital. Our research is primarily focused on machine learning and the implementation of neural networks into trading environments.<br><br><be>
-      <br>For more information, please email <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>.    
+      Penthouse Portfolios is a quantitative technology firm based in Richmond, Virginia that uses proprietary technology to build trading systems tailored to client needs. Our research focuses on the implementation of neural networks into trading environments. 
     </div>
   </div>
-
+  
+  <div class = "page2">
+    <div class = "page2header">
+      Contact
+    </div>
+    <div class = "page2text">
+      For more information, please email <a href="mailto:josholdmixon@gmail.com">info@pentport.com
+    </div>
+  </div>
 </body>
 </html>
