--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Penthouse Portfolios
       Contact
     </div>
     <div class = "page2text">
-      For more information, please email <a href="mailto:josholdmixon@gmail.com">info@pentport.com
+      For more information, please email <a href="mailto:josh@pentport.com">josh@pentport.com
     </div>
   </div>
 </body>
