--- a/finish_this_to_start.html
+++ b/finish_this_to_start.html
@@ -9,6 +9,22 @@ Penthouse Portfolios
   <link href="https://db.onlinewebfonts.com/c/953440d6182da090377d805e5156873c?family=Korbin+W01+Medium" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
 <body>
-If that wasn't obvious you might want to quit now... wejsdfowensdfpooxcfi032r-sdf32
+<div class="fullscreen">
+  <div class="fullscreen-wrapper"></div>
+  <h3 class = "page1header">
+    You've started
+  </h3>
+  <div class = "page1text">
+    If you're reading THIS, it means we have not finished the development of the puzzles. Please check back soon. <br><br><br><br>
+    If you're reading this, it means you are either really curious about our puzzles or you want to be our new web dev.
+    Either way, we hope you enjoy this experience. This is the first time we are trying this, so we are hoping for a positive result. 
+    Before you really begin, here are some things to be aware of:<br><br><br>
+    1. At the end of this puzzle, you will be given a completion code. Email this code to josh@pentport.com and we will be in touch.<br><br>
+    2. Do not try to cheat. We will know and we will laugh as we ignore your email.<br><br>
+    3. Don't think too hard. We are looking for another web dev for a reason. The ideal candidate is more advanced in 
+    web development than any of us, so if you're a good fit, this shouldn't require a ton of effort.
+  </div>
+</div>
+</div>
 </body>
 </html>
