--- a/webdevap.html
+++ b/webdevap.html
@@ -10,7 +10,7 @@ Penthouse Portfolios
 	<link href="main.css" rel="stylesheet" type="text/css"/>
 <body>
 <div class="fullscreen">
-  <div class="fullscreen-wrapper"></div>
+  <div class="fullscreen-wrapper">
     <h3 class = "page1header">
       Web Developer
     </h3>
@@ -21,6 +21,7 @@ Penthouse Portfolios
       Your first clue is : 
       <!-- /finish_this_to_start -->
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>    </div>
+  </div>
   </div>
 </body>
 <div class = "navbar">
