--- a/finish_this_to_start.html
+++ b/finish_this_to_start.html
@@ -23,6 +23,9 @@ Penthouse Portfolios
     2. Do not try to cheat. We will know and we will laugh as we ignore your email.<br><br>
     3. Don't think too hard. We are looking for another web dev for a reason. The ideal candidate is more advanced in 
     web development than any of us, so if you're a good fit, this shouldn't require a ton of effort.
+    <br><br><br><br><br>
+    Here is your next clue:
+    <br><br><br><br><br><br><br><br><br>
   </div>
 </div>
 </div>
