--- a/webdevap.html
+++ b/webdevap.html
@@ -16,7 +16,7 @@ Penthouse Portfolios
     </h3>
     <div class = "page1text">
       Thank you for your interest in joining Penthouse Portfolios. We are looking for a web developer to join our team. You may have
-      clicked on this page expecting a typical application, but we are not a typical company. The engineers at Penthouse have designed a 
+      clicked on this page expecting a typical application, but we are not a typical company. Our engineers have designed a 
       complex system of puzzles that will lead to a set of instructions. Follow those instructions to receive an offer. <br><br>
       Your first clue is: 
       <!-- /finish_this_to_start -->
