--- a/webdevap.html
+++ b/webdevap.html
@@ -17,8 +17,9 @@ Penthouse Portfolios
     <div class = "page1text">
       Thank you for your interest in joining Penthouse Portfolios. We are looking for a web developer to join our team. You may have
       clicked on this page expecting a typical application, but we are not a typical company. Our engineers have designed a 
-      complex system of puzzles that will lead to a set of instructions. Follow those instructions to receive an offer. <br><br>
-      Your first clue is: 
+      complex system of puzzles designed to test your competence in skills we deem necessary for this position. Solve all of these 
+      puzzles to receive an offer. <br><br>
+      Start here: 
       <!-- /finish_this_to_start -->
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>    </div>
   </div>
