--- a/webdevap.html
+++ b/webdevap.html
@@ -8,9 +8,18 @@ Penthouse Portfolios
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
   <link href="https://db.onlinewebfonts.com/c/953440d6182da090377d805e5156873c?family=Korbin+W01+Medium" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
+
 <body>
+  <div class = "navbar">
+    <div class = "companylogoheader">
+      <a href="index.html"><img src="phwhitelogo.png" alt="logo" width="100vw"></a>
+    </div>
+    <div class = "companynameheader">
+      <h1><a href="index.html">Penthouse Portfolios</a></h1>
+    </div>
+  </div>
 <div class="fullscreen">
-  <div class="fullscreen-wrapper">
+  <div class="fullscreen-wrapper"></div>
     <h3 class = "page1header">
       Web Developer
     </h3>
@@ -23,14 +32,6 @@ Penthouse Portfolios
       <!-- /finish_this_to_start -->
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>    </div>
   </div>
-  </div>
-</body>
-<div class = "navbar">
-  <div class = "companylogoheader">
-    <a href="index.html"><img src="phwhitelogo.png" alt="logo" width="100vw"></a>
-  </div>
-  <div class = "companynameheader">
-    <h1><a href="index.html">Penthouse Portfolios</a></h1>
-  </div>
 </div>
+</body>
 </html>
