--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Penthouse Portfolios
 <div class="fullscreen">
   <div class="fullscreen-wrapper"></div>
     <h1 class = "splashtext">
-        The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here.↓
+        The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here ↓
     </h1>
     <h3 class = "page1header">
       About
