--- a/login.html
+++ b/login.html
@@ -22,19 +22,23 @@ Penthouse Portfolios
     </div>
   </div>
   <script src="script.js"></script>
+
 <div class="fullscreen">
-    <h3 class = "page1header">
-      Web Developer
-    </h3>
-    <div class = "page1text">
-      Thank you for your interest in joining Penthouse Portfolios. We are looking for a web developer to join our team. You may have
-      clicked on this page expecting a typical application, but we are not a typical company. Our engineers have designed a 
-      complex system of puzzles designed to test your competence in skills we deem necessary for this position. Solve all of these 
-      puzzles to receive an offer. <br><br>
-      Start here: 
-      <!-- /finish_this_to_start -->
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    </div>
+  <h3 class = "page1header">Sign In</h3>
+    <div class = "loginpage">
+      <form action="login.php" method="POST">
+        <label for="username">Username</label><br>
+        <input type="text" id="username" name="username" required><br><br>
+      
+        <label for="password">Password</label><br>
+        <input type="password" id="password" name="password" required><br><br>
+      
+        <input type="submit" value="Login">
+      </form>
+    </div>  
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
 </div>
+
 </body>
 </html>
