--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ Penthouse Portfolios
 <body>
   <div class = "navbar">
     <div class = "companylogoheader" onclick="window.location.href='index.html'">
-        <img src="phwhitelogo.png" alt="logo" width="100vw">
+        |<img src="phwhitelogo.png" alt="logo" width="100vw">
     </div>
-    <ul id="nav-links" class="collapsed">
+    <ul id="nav-links">
       <li><a href="login.php">Client Login</a></li>
     </ul>
-    <div class = "companynameheader" onclick="toggleMenu()">
+    <div class = "companynameheader" onclick="window.location.href='index.html'">
       <h1>Penthouse Portfolios</h1>
     </div>
   </div>
