--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Penthouse Portfolios
 <body>
   <div class = "navbar">
     <div class = "companylogoheader" onclick="window.location.href='index.html'">
-        |<img src="phwhitelogo.png" alt="logo" width="100vw">
+      <img src="phwhitelogo.png" alt="logo" width="100vw">
     </div>
     <ul id="nav-links">
       <li><a href="login.php">Client Login</a></li>
